[171] REST naming fix + profanity annotation